workloads/istio/base/envoy-filter-access-log.yaml
# Istio EnvoyFilter for JSON Access Logging with Trace ID
# Enables structured access logs with trace correlation
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: enable-access-log
  namespace: istio-system
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: ANY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
    patch:
      operation: MERGE
      value:
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
              log_format:
                json_format:
                  start_time: '%START_TIME%'
                  method: '%REQ(:METHOD)%'
                  path: '%REQ(:PATH)%'
                  protocol: '%PROTOCOL%'
                  response_code: '%RESPONSE_CODE%'
                  response_flags: '%RESPONSE_FLAGS%'
                  bytes_received: '%BYTES_RECEIVED%'
                  bytes_sent: '%BYTES_SENT%'
                  duration: '%DURATION%'
                  upstream_host: '%UPSTREAM_HOST%'
                  x_forwarded_for: '%REQ(X-FORWARDED-FOR)%'
                  user_agent: '%REQ(USER-AGENT)%'
                  request_id: '%REQ(X-REQUEST-ID)%'
                  authority: '%REQ(:AUTHORITY)%'
                  trace_id: '%REQ(X-B3-TRACEID)%'
                  span_id: '%REQ(X-B3-SPANID)%'
